test/sema/return_on_every_branch.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturn(): number {}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value on every path
fn noReturnAllBranch(x: number): number {
    if x == 0.0 {
        return 1.0;
    }
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value on every path
fn returnAllBranch2(x: number): number {
    if x == 0.0 {
        return 1.0;
    } else if x == 1.0 {
        return 2.0;
    }
}

fn returnAllBranch(x: number): number {
    if x == 0.0 {
        return 1.0;
    } else if x == 1.0 {
        return 2.0;
    } else {
        return 3.0;
    }
}

fn alwaysReturnIf(): number {
    if true {
        return 0.0;
    }

    // unreachable
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturnIf(): number {
    if false {
        // unreachable
        return 0.0;
    }
}

fn alwaysReturnElseIf(): number {
    if false {
        // unreachable
        return 0.0;
    } else if true {
        return 0.0;
    }

    // unreachable
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturnElseIf(): number {
    if false {
        // unreachable
        return 0.0;
    } else if false {
        // unreachable
        return 0.0;
    }
}

fn alwaysReturnElseIf2(x: bool): number {
    if x {
        return 0.0;
    } else if true {
        return 0.0;
    }
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value on every path
fn uknownReturnElseIf(x: number): number {
    if x > 1.0 {
        return 0.0;
    } else if x < 1.0 {
        return 0.0;
    } else if x == 0.0 {
        return 3.0;
    }
}

fn alwaysReturnWhile(): number {
    while true {
        return 1.0;
    }

    // unreachable
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturnWhile(): number {
    while false {
        // unreachable
        return 1.0;
    }
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value on every path
fn uknownReturnWhile(x: bool): number {
    while x {
        return 1.0;
    }
}

fn alwaysReturnCondition(x: bool): number {
    if x || x || (0.0 - 1.0 == -1.0) {
        return 0.0;
    }
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value on every path
fn noReturnCondition(x: bool): number {
    if x && (0.0 - 1.0 == -1.0) {
        return 0.0;
    }
}

fn alwaysReturnCondition2(x: bool): number {
    if x && (0.0 - 1.0 == -1.0) {
        return 0.0;
    }

    return 0.0;
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturnLoop(x: bool): number {
    while x {}
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturnInfiniteLoop(): number {
    while true {}
}

// CHECK: [[# @LINE + 1 ]]:4: error: expected function to return a value
fn noReturnNeverRunningLoop(): number {
    while false {}
}

fn returnAllPaths(x: bool): number {
    if (x || x || true) {
        return 1;
    } else {

    }
}

fn returnAllPaths2(x: number): number {
    if (true && true && true) {
        return 1;
    } else {

    }
}

fn returnAllPathsElse(x: bool): number {
    if (x && x && false) {
    } else {
        return 1;
    }
}

fn returnAllPathsElse2(x: number): number {
    if (false || false || false) {
    } else {
        return 1;
    }
}

fn main(): unit {}
